--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   "main": "index.js",
   "homepage": "https://learningportal.ocsc.go.th/ncs",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@mui-treasury/components": "^1.9.1",
+    "@mui/material": "^5.8.3",
+    "@mui/x-data-grid": "^5.12.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/lodash": "^4.14.173",
+    "@types/material-ui": "^0.21.12",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -36,6 +41,7 @@
     "express": "^4.17.1",
     "iframe-resizer-react": "^1.1.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "pure-react-carousel": "^1.27.6",
     "query-string": "^6.13.8",
     "react": "^16.13.1",
@@ -57,7 +63,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
-    "typescript": "~3.7.2",
+    "typescript": "^4.7.3",
     "use-konami": "^1.0.0",
     "yup": "0.29.3"
   },
